# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database.py  eventhandler.py  gameloop.py  index.py  renderer.py
src/sprites/: ball.py  paddle.py
src/tests/: ball_test.py  eventhandler_test.py  gameloop_test.py  paddle_test.py
src/ui/: renderer.py  title_screen.py
